# lico

./: LICENSE  Makefile  README.md
.github/actions/setup/: action.yaml
.github/workflows/: test.yaml
benches/: deno.json  main.ts
benches/cases/fibonacci/: info.toml  main.js  main.lico  main.lua  main.py
benches/cases/mandelbrot/: info.toml  main.js  main.lico  main.lua  main.py
benches/cases/nbody/: info.toml  main.js  main.lico  main.lua  main.py
benches/scripts/: deps.ts  hyperfile.ts  util.ts
cli/: Cargo.toml  main.lico  main.rs
cli/run/: Cargo.toml
cli/run/src/: lib.rs
core/: .gitignore  Cargo.toml  lib.rs
core/compiler/: Cargo.toml
core/compiler/src/: compile.rs  database.rs  lib.rs  lower_ast.rs
core/compiler/src/compile/: compilable_impl_effect.rs  compilable_impl_value.rs  compile_utils.rs  context.rs  fragment.rs  icodesource.rs
core/compiler/src/database/: function_capture.rs
core/compiler/src/lower_ast/: context.rs  effect.rs  value.rs
core/foundation/: Cargo.toml
core/foundation/src/: collections.rs  il.rs  ir.rs  lib.rs  macros.rs  object.rs  syntax.rs
core/foundation/src/collections/: arena.rs  lazy_hash_map.rs  sorted_linear_map.rs
core/foundation/src/il/: code.rs  executable.rs  icode.rs  local_id.rs  module.rs  source_info.rs  unit.rs
core/foundation/src/ir/: item.rs  module.rs  storage.rs
core/foundation/src/object/: array.rs  function.rs  pms_gc.rs  private.rs  rust_function.rs  table.rs  ustring.rs
core/foundation/src/object/private/: pms.rs  t_object.rs
core/foundation/src/syntax/: ast.rs  token.rs
core/foundation/tests/: collections.rs  cycle_object.rs  objects.rs  syntax.rs
core/lexer/: Cargo.toml
core/lexer/src/: cursor.rs  is_x_char.rs  lib.rs
core/lexer/tests/: common.rs  multi.rs  one.rs  test.rs
core/parser/: Cargo.toml
core/parser/src/: grammar.rs  lib.rs  parser.rs  syntax_error.rs  token_set.rs
core/parser/src/grammar/: atom.rs  expression.rs  statement.rs  util.rs
core/parser/test_data/: gen.ts
core/parser/test_data/ok/: 001_comment.lico  002_var_stmt.lico  003_func_stmt.lico  004_for_stmt.lico  005_while_stmt.lico  006_if_stmt.lico  008_return_stmt.lico  010_assing_stmt.lico  011_call_stmt.lico  012_method_call_stmt.lico
core/parser/tests/: example.rs  macros.rs  ok.rs
core/parser/tests/snapshots/: fibonacci_z_combinator.snap  fizz_buzz_for.snap  fizz_buzz_while.snap  hello_with_variable.snap  hello_world.snap  ok_000_empty_file.snap  ok_000_empty_file.snap.new  ok_001_comment.snap  ok_001_comment.snap.new  ok_002_var_stmt.snap  ok_002_var_stmt.snap.new  ok_003_func_stmt.snap  ok_003_func_stmt.snap.new  ok_004_for_stmt.snap  ok_004_for_stmt.snap.new  ok_005_while_stmt.snap  ok_005_while_stmt.snap.new  ok_006_if_stmt.snap  ok_006_if_stmt.snap.new  ok_007_do_stmt.snap  ok_007_do_stmt.snap.new  ok_008_return_stmt.snap  ok_008_return_stmt.snap.new  ok_009_break_stmt.snap  ok_009_break_stmt.snap.new  ok_010_assing_stmt.snap  ok_010_assing_stmt.snap.new  ok_011_call_stmt.snap  ok_011_call_stmt.snap.new  ok_012_method_call_stmt.snap  ok_012_method_call_stmt.snap.new  ok__assing_stmt.snap  ok__break_stmt.snap  ok__call_stmt.snap  ok__comment.snap  ok__do_stmt.snap  ok__empty.snap  ok__empty_file.snap  ok__for_stmt.snap  ok__func_stmt.snap  (+5 more)
core/vm/: Cargo.toml
core/vm/src/: builtin.rs  exception.rs  exec_icode.rs  lib.rs  runtime.rs
core/vm/src/builtin/: array.rs  bool.rs  float.rs  function.rs  int.rs  nil.rs  rust_function.rs  string.rs  table.rs  util_macros.rs
core/vm/src/runtime/: local_table.rs  stack.rs
src/: .gitignore  Cargo.toml  lib.rs
src/compiler/: Cargo.toml
src/compiler/src/: block.rs  compile.rs  context.rs  error.rs  expression.rs  fragment.rs  lib.rs  statement.rs  tools.rs
src/compiler/src/compile/: block.rs  expression.rs  statement.rs  util.rs
src/compiler/src/tools/: context.rs  fragment.rs  icode.rs
src/foundation/: Cargo.toml
src/foundation/src/: ast.rs  il.rs  lib.rs  object.rs  textspan.rs  token.rs
src/foundation/src/ast/: display.rs  structs.rs
src/foundation/src/il/: code.rs  local_id.rs  unit.rs
src/foundation/src/object/: array.rs  collections.rs  function.rs  integer.rs  pms.rs  private.rs  table.rs  uni_string.rs  ustring.rs
src/foundation/src/object/collections/: linear_map.rs  liner_map.rs  switch_map.rs
src/foundation/src/object/private/: pms.rs
src/foundation/tests/: cycle_object.rs  object_collections.rs  objects.rs
src/lexer/: Cargo.toml
src/lexer/src/: error.rs  lexer.rs  lib.rs  textspan.rs  token.rs  tokenize.rs
src/lexer/tests/: accept.rs  number.rs  reject.rs  string.rs  symbol.rs
src/lexer/tests/common/: mod.rs
src/parser/: Cargo.toml
src/parser/src/: error.rs  lib.rs  parser.rs  tree.rs  walker.rs
src/parser/src/parser/: block.rs  expression.rs  statement.rs  util.rs
src/parser/src/tree/: array_object.rs  attribute_statement.rs  block.rs  call.rs  call_statement.rs  control_statement.rs  display.rs  expression.rs  function_object.rs  local.rs  misc.rs  program.rs  statement.rs  structs.rs  table_object.rs  variable_statement.rs
src/parser/tests/: call_statement.rs  complicated_call.rs  complicated_expr.rs  expression.rs  pratt_expr.rs  simple.rs  simple_statement.rs  statement.rs
src/parser/tests/common/: mod.rs
src/syntax/: Cargo.toml
src/syntax/src/: lex.rs  lib.rs
src/syntax/src/tree/: node.rs  parse.rs
src/syntax/tests/: simple_statement.rs
src/syntax/tests/common/: mod.rs
src/vm/: Cargo.toml
src/vm/src/: code.rs  execute.rs  lib.rs  runtime.rs
src/vm/src/runtime/: global.rs  object.rs  stack.rs  stdio.rs  variable_table.rs
src/vm/src/runtime/object/: array.rs  float.rs  function.rs  int.rs  macros.rs  primitive.rs  string.rs  table.rs
src/vm/tests/: basic_code.rs  capture.rs
tests/: deno.json  main.ts
tests/cases/fibonacci_z_combinator/: main.lico
tests/cases/fizz_buzz_for/: main.lico
tests/cases/fizz_buzz_for/output/: sample.txt
tests/cases/fizz_buzz_while/: main.lico
tests/cases/hello_with_variable/: output.txt
tests/random/: hello_with_variable.lico
(+1 files in other folders)
