[package]
name = "lico"
version = "0.0.0"
authors = ["ryota2357"]
edition = "2021"
description = "TODO"
license = "MIT"

[workspace]
resolver = "2"
members = ["run"]

[[bin]]
name = "lico"
path = "main.rs"
doc = false

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
run = { path = "./run" }
