[package]
name = "lico"
version = "0.0.0"
authors = ["ryota2357"]
edition = "2021"
description = "TODO"
license = "MIT"

[[bin]]
name = "lico"
path = "main.rs"
doc = false

[dependencies]
run.path = "run"
clap = { version = "4.4.18", features = ["derive"] }

[workspace]
resolver = "2"
members = ["run"]

[workspace.package]
version = "0.0.0"
authors = ["ryota2357"]
edition = "2021"

[workspace.dependencies]
compiler.path = "../src/compiler"
lexer.path = "../src/lexer"
parser.path = "../src/parser"
vm.path = "../src/vm"
