[workspace]
resolver = "2"
members = ["run"]

[workspace.package]
version = "0.1.0"
authors = ["ryota2357"]
edition = "2021"

[workspace.dependencies]
lico_core.path = "../src/"

[package]
name = "lico"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "TODO"
license = "MIT"

[[bin]]
name = "lico"
path = "main.rs"
doc = false

[dependencies]
run.path = "./run/"
clap = { version = "4.4.18", features = ["derive"] }
