[workspace]
resolver = "2"
members = [
    "foundation",
    "lexer",
    "parser"
]

[workspace.package]
version = "0.3.0"
authors = ["ryota2357"]
edition = "2021"

[workspace.dependencies]
foundation.path = "./foundation/"
ahash = "0.8.11"
compact_str = "0.7.1"
hashbrown = "0.14.3"
rowan = "0.15.15"
unicode-ident = "1.0.12"
unicode-properties = { version =  "0.1.1", default-features = false }

[package]
name = "lico_core"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
path = "lib.rs"

[dependencies]
foundation.workspace = true
lexer.path = "./lexer/"
parser.path = "./parser/"
