[workspace]
resolver = "2"
members = [
    "compiler",
    "foundation",
    "lexer",
    "parser",
]

[workspace.package]
version = "0.3.0"
authors = ["ryota2357"]
edition = "2021"

[workspace.dependencies]
foundation.path = "./foundation/"
ahash = "0.8.11"
compact_str = "0.8.0"
hashbrown = "0.14.3"
pretty_assertions = "0.1.0"
rowan = "0.15.15"
rustc-hash = "1.1.0"
smallvec = "2.0.0-alpha.6"
unicode-ident = "1.0.12"
unicode-properties = { version =  "0.1.1", default-features = false }

[package]
name = "lico_core"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
path = "lib.rs"

[dependencies]
foundation.workspace = true
lexer.path = "./lexer/"
parser.path = "./parser/"
compiler.path = "./compiler/"
