[workspace]
resolver = "2"
members = [
    "compiler",
    "foundation",
    "lexer",
    "parser",
    "vm",
]

[workspace.package]
version = "0.3.0"
authors = ["ryota2357"]
edition = "2021"

[workspace.dependencies]
foundation.path = "./foundation/"
ahash = "0.8.11"
anyhow = "1.0.86"
bitflags = "2.6.0"
compact_str = "0.9.0"
hashbrown = "0.14.5"
insta = "1.39.0"
pretty_assertions = "1.4.0"
rowan = "0.15.15"
rustc-hash = "2.0.0"
smallvec = "2.0.0-alpha.7"
unicode-ident = "1.0.12"
unicode-properties = { version = "0.1.1", default-features = false }

[package]
name = "lico_core"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
path = "lib.rs"

[dependencies]
foundation.workspace = true
lexer.path = "./lexer/"
parser.path = "./parser/"
compiler.path = "./compiler/"
vm.path = "./vm/"
