[workspace]
resolver = "2"
members = [
    "compiler",
    "lexer",
    "parser",
    "vm",
]

[workspace.package]
version = "0.0.0"
authors = ["ryota2357"]
edition = "2021"

[workspace.dependencies]
compiler.path = "compiler"
lexer.path = "lexer"
parser.path = "parser"
vm.path = "vm"
ecow = "0.2.0"
pretty_assertions = "1.4.0"
regex = "1.10.2"
rustc-hash = "1.1.0"
thiserror = "1.0.56"
unicode-ident = "1.0.12"
