[package]
name = "foundation"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
compact_str = { workspace = true }
ahash = { workspace = true }
hashbrown = { workspace = true }

[dev-dependencies]
# mockalloc = "0.1.2"
mockalloc = { git = "https://github.com/Diggsey/mockalloc" }
