[package]
name = "foundation"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
compact_str = { workspace = true }
hashbrown = { workspace = true }
rowan = { workspace = true }

[dev-dependencies]
# mockalloc = "0.1.2"
mockalloc = { git = "https://github.com/Diggsey/mockalloc" }
