[package]
name = "parser"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
lexer.workspace = true
ecow = { workspace = true }
rustc-hash = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
regex = { workspace = true}
