[package]
name = "parser"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
foundation.workspace = true
ecow = { workspace = true }
rustc-hash = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
lexer.workspace = true
pretty_assertions = { workspace = true }
regex = { workspace = true}
